[package]
name = "rms"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
swagger-ui = "0.1.5"
utoipa = { version = "5.2.0" }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
tokio = { version = "1.0", features = ["full"] }
dotenv_codegen = "0.15.0"
uuid = { version = "1.11.0", features = ["v4"] }
env_logger = "0.11.5"
log = "0.4.22"

[dependencies.mongodb]
version = "3.1.0"
features = ["sync"]
